--- a/css/main.css
+++ b/css/main.css
@@ -49,19 +49,46 @@ FOOTER
 ---------------*/
 
 footer {
-  display: flex;
-  flex-direction: column;
-  /* background-color: #444; */
-  /* color: #fff; */
-  /* padding: 60px 0; */
+  margin: auto;
   text-align: center;
-  align-items: center;
+}
+
+.flex-container {
+  /* We first create a flex layout context */
+  display: flex;
+
+  /* Then we define the flow direction 
+     and if we allow the items to wrap 
+   * Remember this is the same as:
+   * flex-direction: row;
+   * flex-wrap: wrap;
+   */
+  flex-flow: row wrap;
+
+  /* Then we define how is distributed the remaining space */
+  justify-content: space-around;
+
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.flex-item {
+  /* background: tomato; */
+  padding: 5px;
+  /* width: 200px; */
+  /* height: 150px; */
+  margin-top: 10px;
+  /* line-height: 150px; */
+  /* color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center; */
 }
 
 footer ul {
   display: flex;
-  margin-bottom: 25px;
-  font-size: 32px;
+  justify-content: center;
   list-style: none;
 }
 
