--- a/css/main.css
+++ b/css/main.css
@@ -98,11 +98,11 @@ footer ul li {
 }
 
 footer ul li:first-child {
-  /* margin-left: 0; */
+  margin-left: 0;
 }
 
 footer ul li:last-child {
-  /* margin-right: 0; */
+  margin-right: 0;
 }
 
 footer p {
