--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,8 +1,9 @@
 /* Slideshow container */
 .slideshow-container {
-    max-width: 1000px;
+    max-width: 750px;
     position: relative;
     margin: auto;
+    border: 3px solid #000;
 }
 
 /* Hide the images by default */
@@ -29,6 +30,7 @@
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 /* Position the "next button" to the right */
@@ -40,7 +42,7 @@
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 /* Caption text */
@@ -66,9 +68,9 @@
 /* The dots/bullets/indicators */
 .dot {
     cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
+    height: 10px;
+    width: 10px;
+    margin: 2px 2px 2px 2px;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
@@ -94,12 +96,4 @@
     to {
         opacity: 1
     }
-}
-
-#info h1 {
-    text-align: center;
-}
-
-#info p {
-    text-align: center;
 }
